# rust-armv5

./: Cargo.toml  README.md  justfile
.cargo/: config
src/: main.rs
